--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-google-analytics": "^2.3.1",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-netlify": "^2.3.2",
+    "gatsby-plugin-netlify-cms": "^4.3.1",
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-postcss": "^2.3.1",
     "gatsby-plugin-purgecss": "^5.0.0",
@@ -27,6 +28,7 @@
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-remark": "^2.8.7",
     "gatsby-transformer-sharp": "^2.5.2",
+    "netlify-cms-app": "^2.12.12",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
